syntax = "proto3";

option java_package = "no.nordicsemi.android.common.core.settings";
option java_multiple_files = true;

message NordicCommonLibsSettings {

  bool location_permission_requested = 1;
  bool bluetooth_permission_requested = 2;
  bool wifi_permission_requested = 3;
  bool notification_permission_requested = 4;
  bool analytics_has_been_granted = 5;
  bool analytics_was_info_shown = 6;
}
